--- a/BookResale.Web/Shared/MainLayout.razor
+++ b/BookResale.Web/Shared/MainLayout.razor
@@ -1,6 +1,31 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
+<Header />
+
+@Body
+
+<Footer />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@*<div class="page">
     <div class="sidebar">
         <NavMenu />
     </div>
@@ -15,3 +40,4 @@
         </article>
     </main>
 </div>
+*@
